optimize tinygp evolve for tgp